// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Expandable open and close: closed 1`] = `
"<a-expandable direction="down">
      <button slot="toggle" type="button" aria-controls="expandable_content_4" id="expandable_toggle_4" aria-expanded="false">
        <div class="headline">Title</div>
      </button>

      <div role="region" id="expandable_content_4" aria-labelledby="expandable_toggle_4" aria-hidden="true" inert="">Content</div>
    </a-expandable>"
`;

exports[`Expandable open and close: opened 1`] = `
"<a-expandable direction="down">
      <button slot="toggle" type="button" aria-controls="expandable_content_4" id="expandable_toggle_4" aria-expanded="true">
        <div class="headline">Title</div>
      </button>

      <div role="region" id="expandable_content_4" aria-labelledby="expandable_toggle_4" aria-hidden="false">Content</div>
    </a-expandable>"
`;

exports[`Expandable open and close: closed 2`] = `
"<a-expandable direction="down">
      <button slot="toggle" type="button" aria-controls="expandable_content_14" id="expandable_toggle_14" aria-expanded="false">
        <div class="headline">Title</div>
      </button>

      <div role="region" id="expandable_content_14" aria-labelledby="expandable_toggle_14" aria-hidden="true" inert="">Content</div>
    </a-expandable>"
`;

exports[`Expandable open and close: opened 2`] = `
"<a-expandable direction="down">
      <button slot="toggle" type="button" aria-controls="expandable_content_14" id="expandable_toggle_14" aria-expanded="true">
        <div class="headline">Title</div>
      </button>

      <div role="region" id="expandable_content_14" aria-labelledby="expandable_toggle_14" aria-hidden="false">Content</div>
    </a-expandable>"
`;

exports[`Expandable open and close: closed 3`] = `
"<a-expandable direction="down">
      <button slot="toggle" type="button" aria-controls="expandable_content_24" id="expandable_toggle_24" aria-expanded="false">
        <div class="headline">Title</div>
      </button>

      <div role="region" id="expandable_content_24" aria-labelledby="expandable_toggle_24" aria-hidden="true" inert="">Content</div>
    </a-expandable>"
`;

exports[`Expandable open and close: opened 3`] = `
"<a-expandable direction="down">
      <button slot="toggle" type="button" aria-controls="expandable_content_24" id="expandable_toggle_24" aria-expanded="true">
        <div class="headline">Title</div>
      </button>

      <div role="region" id="expandable_content_24" aria-labelledby="expandable_toggle_24" aria-hidden="false">Content</div>
    </a-expandable>"
`;
